Zoom fully functional, few bugs to squash

--- a/frontend/jbio-web-app/src/ElectrophoresisCell.css
+++ b/frontend/jbio-web-app/src/ElectrophoresisCell.css
@@ -32,6 +32,11 @@
     z-index: 3;
     left: 20.5em;
     top: -70em;
+    overflow-y: scroll;
+}
+
+.electrophoresis-cell::-webkit-scrollbar {
+    display: none;
 }
 
 .buttons-container-1de {
@@ -214,6 +219,16 @@
     border-radius: 0 0 5px 5px;
     padding: 15px;
     line-height: 2em;
+}
+
+#zoomText::-webkit-outer-spin-button,
+#zoomText::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#zoomText {
+    width: 30px;
 }
 
 
